[patch] Fix ArrowScroller arrow z-index

--- a/src/ArrowScroller/style/base.scss
+++ b/src/ArrowScroller/style/base.scss
@@ -60,7 +60,7 @@
 
 .#{$ZIPPY_ARROW_SCROLLER_ROOT_CLASS}__arrow--auto {
   position: absolute;
-  z-index: 100;
+  // z-index: 100;
   text-align: center;
 }
 
